// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button when type is SECONDARY renders 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#F5F4F0",
        "borderRadius": 100,
        "height": 48,
        "justifyContent": "center",
        "minWidth": 98,
        "opacity": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 5,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 15,
          "lineHeight": 20,
        }
      }
    >
      Button
    </Text>
  </View>
</View>
`;

exports[`Button when type is TERTIARY renders 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#EEB93C",
        "borderRadius": 100,
        "height": 48,
        "justifyContent": "center",
        "minWidth": 98,
        "opacity": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 5,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 15,
          "lineHeight": 20,
        }
      }
    >
      Button
    </Text>
  </View>
</View>
`;

exports[`Button when type not given defaults to primary 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#1AB775",
        "borderRadius": 100,
        "height": 48,
        "justifyContent": "center",
        "minWidth": 98,
        "opacity": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 5,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 15,
          "lineHeight": 20,
        }
      }
    >
      Button
    </Text>
  </View>
</View>
`;
